# UniSplice.NativeMono

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  main.cpp  unisplice.h
app/src/main/cpp/include/: shadowhook.h
app/src/main/cpp/unisplice/: Main.cpp  Main.h
app/src/main/cpp/unisplice/hook/: DlOpen.cpp  DlOpen.h  Misc.cpp  Misc.h  Mono.cpp  Mono.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
